@@ -6,6 +6,7 @@ Imported images with spaces are not loaded via the lazyload function - FIXED
 GD Listings shortcode extended with the "tags" parameter to filter listings by tags - ADDED
 fgetcsv ignores special characters when they are at the beginning of line - FIXED
 When a CPT has no listing it replaces the blank CPT name in meta titles - FIXED
+Map un-ticked cats wrong on first load if default place CPT not used - FIXED
 
 v1.6.4
 Date custom field can sometimes display default date on preview page - FIXED
